--- a/Application/Home/View/AllInOne/allmodules.html
+++ b/Application/Home/View/AllInOne/allmodules.html
@@ -38,6 +38,7 @@
 <br>
 <div id="AllInOneDetail">
     <include file="AllInOne/module_xmjbxx" />
+    <include file="AllInOne/module_xmscfx" />
     <include file="AllInOne/module_dxmgl" />
 </div>
 
