--- a/Application/Home/View/AllInOne/allmodules.html
+++ b/Application/Home/View/AllInOne/allmodules.html
@@ -14,6 +14,8 @@
 <!--<div id="AllInOneMain" >-->
     <INPUT type="text" id="user_id" name="user_id" value="{$user_id}" >
     <br/>
+    <INPUT type="text" id="user_fgs" name="user_fgs" value="{$user_fgs}" >
+    <br/>
     <INPUT type="text" id="user_department" name="user_department" value="{$user_department}" >
     <br/>
     <INPUT type="text" id="dep_module" name="dep_module" value='{$dep_module}' >
@@ -38,7 +40,6 @@
 <br>
 <div id="AllInOneDetail">
     <include file="AllInOne/module_xmjbxx" />
-    <include file="AllInOne/module_xmscfx" />
     <include file="AllInOne/module_dxmgl" />
 </div>
 
